# ChangeLog for dev-python/django-macaddress
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*django-macaddress-1.3.0-r3 (24 Mar 2015)

  24 Mar 2015; Justin Lecher <jlec@gentoo.org>
  +django-macaddress-1.3.0-r3.ebuild,
  +files/django-macaddress-1.3.0-django-1.7-backport.patch,
  +files/django-macaddress-1.3.0-python3.patch,
  -django-macaddress-1.3.0-r2.ebuild,
  -files/django-macaddress-1.3.0-django-1.7-backport:
  dev-python/django-macaddress: Properly fix python3 support

*django-macaddress-1.3.0-r2 (24 Mar 2015)

  24 Mar 2015; Justin Lecher <jlec@gentoo.org>
  +django-macaddress-1.3.0-r2.ebuild,
  +files/django-macaddress-1.3.0-django-1.7-backport,
  -django-macaddress-1.3.0-r1.ebuild:
  dev-python/django-macaddress: Backport fix for django-1.7

*django-macaddress-1.3.0-r1 (22 Mar 2015)

  22 Mar 2015; Justin Lecher <jlec@gentoo.org>
  +django-macaddress-1.3.0-r1.ebuild, -django-macaddress-1.3.0.ebuild,
  metadata.xml:
  dev-python/django-macaddress: Fix for python 3

  21 Mar 2015; Johann Schmitz <ercpe@gentoo.org> django-macaddress-1.3.0.ebuild:
  Dropped unused IUSE

*django-macaddress-1.3.0 (21 Mar 2015)

  21 Mar 2015; Johann Schmitz <ercpe@gentoo.org>
  +django-macaddress-1.3.0.ebuild, +metadata.xml:
  New ebuild for django-macaddress