@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*django-macaddress-1.3.1 (13 Apr 2015)
+
+  13 Apr 2015; Justin Lecher <jlec@gentoo.org> +django-macaddress-1.3.1.ebuild:
+  dev-python/django-macaddress: Version Bump
+
 *django-macaddress-1.3.0-r3 (24 Mar 2015)
 
   24 Mar 2015; Justin Lecher <jlec@gentoo.org>
